fix: CSS issue on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   width: 100vw;
   overflow: hidden;
   background: #c6c6c6;
+  position: relative;
 }
 .user-video-div {
   height: 100%;
@@ -44,4 +45,17 @@
   outline: none;
   border: 1px solid #00adff;
   margin: 5px 0px;
+}
+@media only screen and (max-width : 768px) {
+  .user-video-div{
+    width: 100%;
+  }
+  .sidebar-div .functions{
+    padding: 0px 10px 0px 0px;
+  }
+  .sidebar-div {
+    position:absolute;
+    right: 0;
+    top: 0;
+  }
 }
